# 047-multi-scale-attention

./: README.md  README.ru.md  README.specify.md  readme.simple.md  readme.simple.ru.md
python/: __init__.py  data.py  example_usage.py  model.py  requirements.txt  strategy.py
rust/: Cargo.toml
rust/src/: data.rs  lib.rs  model.rs  strategy.rs
